welcome.lessons.welcome.variables.RunHalf.scala.error
RunHalf:6: error: not found: value caseOrange
while (2 * biscuits != caseOrange + 1){
                       ^