welcome.lessons.welcome.variables.RunHalf.scala.code
override def run() {
}
var biscuits=0;
var caseOranges=0;
while (2 * biscuits != caseOrange + 1){
	avance();
	if (estSurBiscuit()){
		biscuits=biscuits+1;
	
	}
	if (estSurOrange()){
		caseOranges=caseOranges+1;
	}
}
